# Cat-Sith

./: CLAUDE.md  Cargo.toml  README.md  clippy.toml  rustfmt.toml
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
crates/catsith-api/: Cargo.toml
crates/catsith-api/src/: client.rs  lib.rs  messages.rs  serialization.rs  server.rs
crates/catsith-backend-neural/: Cargo.toml  LORA_ARCHITECTURE.md
crates/catsith-backend-neural/src/: candle.rs  embedder.rs  inference.rs  kan.rs  lib.rs  onnx.rs  renderer.rs  temporal.rs
crates/catsith-backend-neural/src/models/: diffusion.rs  mod.rs  sprite_vae.rs
crates/catsith-backend-raster/: Cargo.toml
crates/catsith-backend-raster/src/: atlas.rs  compositor.rs  lib.rs  renderer.rs
crates/catsith-backend-terminal/: Cargo.toml
crates/catsith-backend-terminal/src/: color.rs  lib.rs  output.rs  renderer.rs  sprites.rs
crates/catsith-cli/: Cargo.toml
crates/catsith-cli/examples/: neural_animation.rs  neural_sprite.rs  terminal_animation.rs  terminal_scene.rs
crates/catsith-cli/src/: main.rs
crates/catsith-cli/src/commands/: caps.rs  demo.rs  lora.rs  mod.rs  render.rs  server.rs
crates/catsith-core/: Cargo.toml
crates/catsith-core/src/: capability.rs  entity.rs  intent.rs  lib.rs  output.rs  scene.rs  semantic.rs  style.rs
crates/catsith-domain-exospace/: Cargo.toml
crates/catsith-domain-exospace/src/: entities.rs  environments.rs  events.rs  lib.rs  sprites.rs
crates/catsith-kan/: Cargo.toml  README.md  ROADMAP.md
crates/catsith-kan/src/: bspline.rs  error.rs  gpu.rs  kan.rs  kan_layer.rs  lib.rs  sprite.rs  univariate.rs
crates/catsith-kan/src/shaders/: bspline.wgsl  kan_layer.wgsl  sprite_generate.wgsl  univariate.wgsl  weight_update.wgsl
crates/catsith-lora/: Cargo.toml
crates/catsith-lora/src/: injector.rs  lib.rs  loader.rs  manifest.rs  registry.rs  validator.rs
crates/catsith-pipeline/: Cargo.toml
crates/catsith-pipeline/src/: cache.rs  lib.rs  lora.rs  pipeline.rs  scheduler.rs  stage.rs
docs/: ARCHITECTURE.md  LORA_SPEC.md  NEURAL_MODELS.md  PIPELINE.md  SEMANTIC_API.md  TRAINING_GUIDE.md
scripts/: setup-hooks.sh
