[workspace]
members = [
    "crates/catsith-core",
    "crates/catsith-api",
    "crates/catsith-pipeline",
    "crates/catsith-backend-terminal",
    "crates/catsith-backend-neural",
    "crates/catsith-backend-raster",
    "crates/catsith-lora",
    "crates/catsith-kan",
    "crates/catsith-domain-exospace",
    "crates/catsith-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["Justin Elliott Cobb <justin@industrialalgebra.com>"]
repository = "https://github.com/justinelliottcobb/CatSith"

[workspace.dependencies]
# Internal crates
catsith-core = { path = "crates/catsith-core" }
catsith-api = { path = "crates/catsith-api" }
catsith-pipeline = { path = "crates/catsith-pipeline" }
catsith-backend-terminal = { path = "crates/catsith-backend-terminal" }
catsith-backend-neural = { path = "crates/catsith-backend-neural" }
catsith-backend-raster = { path = "crates/catsith-backend-raster" }
catsith-lora = { path = "crates/catsith-lora" }
catsith-kan = { path = "crates/catsith-kan" }
catsith-domain-exospace = { path = "crates/catsith-domain-exospace" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bitcode = "0.6"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Terminal rendering
crossterm = "0.28"

# Neural inference (candle - Hugging Face's Rust ML framework)
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
hf-hub = "0.3"
tokenizers = "0.20"

# Legacy ONNX support
tract-onnx = "0.21"

# Image processing
image = "0.25"

# Parallelism
rayon = "1.10"

# Utilities
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
blake3 = "1.5"
bitflags = { version = "2.6", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
