[package]
name = "catsith-backend-neural"
description = "Neural inference rendering backend for CatSith"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
catsith-core = { workspace = true }
catsith-pipeline = { workspace = true }
catsith-kan = { workspace = true, optional = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
image = { workspace = true }

# Candle - Hugging Face's Rust ML framework
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }
hf-hub = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

[features]
default = []
# Enable Candle-based Stable Diffusion inference
candle = ["candle-core", "candle-nn", "candle-transformers", "hf-hub", "tokenizers"]
# Enable KAN-based sprite generation
kan = ["catsith-kan"]
