[package]
name = "catsith-kan"
description = "Kolmogorov-Arnold Networks for sprite generation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
# GPU compute
wgpu = "0.20"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"
flume = "0.11"

# Async
tokio = { workspace = true }

# Random initialization
rand = "0.8"

# Error handling
thiserror = { workspace = true }

# Internal (for sprite integration)
catsith-core = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
